--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@sveltejs/adapter-auto": "^3.2.2",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "svelte": "^4.2.10",
+    "svelte-preprocess": "^6.0.1",
+    "typescript": "^5.4.5",
     "vite": "^5.1.0"
   },
   "dependencies": {
-    "axios": "^1.6.7"
+    "@types/three": "^0.165.0",
+    "axios": "^1.6.7",
+    "svelte-spa-router": "^4.0.1",
+    "three": "^0.165.0",
+    "three-stdlib": "^2.30.3"
   }
 }
